# coinbaseCPP

./: -- SQLite.sql  .gitignore  CMakeLists.txt  Dockerfile  README.md  coinAPI.cpp
.devcontainer/: devcontainer.json
db/: testDB.db
src/: coinBaseClient.cpp  coinBaseClient.h  database.cpp  database.h  orderBook.cpp  orderBook.h  parser.cpp  parser.h  timer.h
test/: L2.json  SNAPSHOT.json  main.cpp  subscribe.json
